# open-streaming-music-library

./: .gitignore  LICENSE  README.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/core/: media_types.py
backend/app/database/: __init__.py  database.py  init.sql
backend/app/models/: __init__.py  album.py  api_return_models.py  client_track.py  cover_art.py  track.py  track_meta_data.py
backend/app/services/: __init__.py  cover_art_manager.py  file_watcher.py  ingestion.py  metadata.py  organizer.py
backend/tests/: test_api.py  test_cover_art_manager.py  test_database.py  test_file_watcher.py  test_ingestion.py  test_metadata.py  test_organizer.py
frontend/: analysis_options.yaml  pubspec.yaml
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/lib/api/: api_client.dart  artist_albums_api.dart  artist_api.dart  pagination.dart  tracks_api.dart
frontend/lib/database/: database.dart
frontend/lib/providers/: audio_provider.dart  cover_art_cache_manager.dart  playback_window.dart  providers.dart
frontend/lib/repositories/: browse_repository.dart  queue_repository.dart  track_repository.dart
frontend/lib/ui/: albums_page.dart  artist_page.dart  login_page.dart  search_page.dart  startup_gate.dart  tracks_page.dart
frontend/lib/util/: utils.dart
frontend/macos/Runner/: DebugProfile.entitlements  Release.entitlements
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/test/: database_test.dart
frontend/test/api/: api_client_test.dart  (+3 more)
(+52 files in other folders)
