[project]
name = "backend"
version = "0.1.0"
description = "Backend for your music server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.0",
    "httpx>=0.28.1",
    "libarchive-c>=5.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "uvicorn>=0.38.0",
    "watchdog>=6.0.0",
]
